--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body {
   background-color: hsl(229, 57%, 11%);
-  background-image: url("/images/bg-desktop.png");
+  background-image: url("images/bg-desktop.png");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: contain;
